--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
 <body>
     <div class="container">
         <div class="wallet">
-            <div class="arr-of-accounts"></div>
-            <button class="add-account">+</button>
+            <h1>Choose your account.</h1>
+            <div class="account-card">
+                <h2>Card Holder Name</h2>
+            </div>
         </div>
-        <div class="add-account-modal">
+        <div class="add-account-modal hidden">
             <!-- Form for adding account -->
-             <form id="form">
                 <h2>Add an account to your wallet</h2>
                 <div class="form-group">
                     <label for="card-holder">Card Holder Name</label>
-                    <input type="text" id="card-holder" name="card-holder" placeholder="Enter Full Name">
+                    <input type="text" class="input card-holder" name="card-holder" placeholder="Enter Full Name">
                 </div>
                 <div class="form-group">
                     <label for="account-number">Account Number</label>
-                    <input type="number" id="account-number" name="account-number" placeholder="Enter Account Number">
+                    <input type="number" class="input account-number" name="account-number" placeholder="Enter Account Number">
                 </div>
                 <div class="form-group">
                     <label for="expiry-date">Expiry Date</label>
-                    <input type="date" id="expiry-date" name="expiry-date">
+                    <input type="date" class="expiry-date" name="expiry-date">
                 </div>
                  <div class="form-group">
                     <label for="card-network">Card Network</label>
-                    <select id="card-network" name="card-network">
+                    <select class="card-network" name="card-network">
                         <option value="visa">Visa</option>
                         <option value="mastercard">Mastercard</option>
                         <option value="american-express">American Express</option>
@@ -41,10 +42,9 @@
                 </div>
                 <div class="form-group">
                     <label for="balance">Balance</label>
-                    <input type="number" id="balance" name="balance" placeholder="Enter Amount">
+                    <input type="number" class=" input balance" name="balance" placeholder="Enter Amount">
                 </div>
-                <button type="button" onclick="getInputValue()">Add Account</button>
-            </form>
+                <button class="btn add-account" type="button">Add Account</button>
         </div>
     </div>
     
