functionality in progress. . . .

--- a/index.html
+++ b/index.html
@@ -14,13 +14,17 @@
             <h1 class="choose-account-header hidden">Choose your account.</h1>
             <h1 class="create-account-header hidden ">Create your account.</h1>
             <h3 class="message user-accounts hidden">Your wallet is empty. Please add account</h3>
-            <div class="account-card hidden">
-                <!-- <h3>Card Holder Name: John Doe</h3>
-                <h3>Account Number: 9876543210123456</h3>
-                <h3>Expiry Date: 01/01/3001</h3>
-                <h3>Card Network: Discover</h3>
-                <h3>Balance: 123456789</h3> -->
+            <button type="button" class="btn btn-prev hidden"><</button>
+            <div class="accounts hidden">
+                <div class="account-card hidden">
+                    <!-- <h3>Card Holder Name: John Doe</h3>
+                    <h3>Account Number: 9876543210123456</h3>
+                    <h3>Expiry Date: 01/01/3001</h3>
+                    <h3>Card Network: Discover</h3>
+                    <h3>Balance: 123456789</h3> -->
+                </div>
             </div>
+            <button type="button" class="btn btn-next hidden">></button>
             <button type="submit" class="btn btn-create-account hidden">Create Account</button>
         </div>
         <div class="transactions-list">
